--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "generate-build-version": "node generate-build-version",
+    "prebuild": "npm run generate-build-version",
     "build": "react-scripts build && copy build\\index.html build\\404.html",
     "test": "react-scripts test",
     "predeploy": "npm run build",
